PointerEvents should not require touch event listeners to be registered https://bugs.webkit.org/show_bug.cgi?id=191333 <rdar://problem/45857523>

Reviewed by Dean Jackson.

Source/WebCore:

Tests: pointerevents/ios/pointer-events-dispatch-on-touch.html
       pointerevents/ios/pointer-events-prevent-default.html

* dom/EventNames.h:
(WebCore::EventNames::isTouchEventType const):
(WebCore::EventNames::touchAndPointerEventNames const):
(WebCore::EventNames::touchEventNames const): Deleted.
* dom/Node.cpp:
(WebCore::Node::moveNodeToNewDocument):

Source/WebKit:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::updateTouchEventTracking):
(WebKit::WebPageProxy::touchEventTrackingType const):
(WebKit::WebPageProxy::handleTouchEventSynchronously):
(WebKit::WebPageProxy::handleTouchEventAsynchronously):
(WebKit::WebPageProxy::handleTouchEvent):
(WebKit::WebPageProxy::resetState):
* UIProcess/WebPageProxy.h:

LayoutTests:

Add two iOS tests that check that we dispatch pointer events when only those events are registered
and that we correctly account for calls to preventDefault(). To support pointer events test, we add
a new utility where we will be adding user interaction functions that should allow these tests to be
submitted to the WPT repository provided browsers implement their own versions of the UIController.

* TestExpectations:
* pointerevents/ios/pointer-events-dispatch-on-touch-expected.txt: Added.
* pointerevents/ios/pointer-events-dispatch-on-touch.html: Added.
* pointerevents/ios/pointer-events-prevent-default-expected.txt: Added.
* pointerevents/ios/pointer-events-prevent-default.html: Added.
* pointerevents/utils.js: Added.

Canonical link: https://commits.webkit.org/206469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238274 268f45cc-cd09-0410-ab3c-d52691b4dbfc